# shieldclaw

./: .cursorrules  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  RESPONSIBLE_USE.md  SECURITY.md  docker-compose.yml  pom.xml
evals/: README.md  eval_data.json  run_evals.py
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  config.ts  index.css
frontend/src/components/: AuditDashboard.tsx  Login.tsx  TelemetryChart.tsx
frontend/src/types/: Audit.ts
red-team-agent/: Dockerfile  agent.py  github_recon.py  requirements.txt  sandbox_orchestrator.py  sandbox_reaper.py  test_agent.py
shield-claw/: .env.example  .gitignore  pyproject.toml  requirements-dev.txt
shield-claw/docs/adrs/: 001-module-isolation.md  002-pipeline-orchestration.md  003-llm-provider-abstraction.md  004-docker-sandbox-strategy.md  005-attacker-container-pypi-access.md
shield-claw/scripts/: verify_harness.sh
shield-claw/src/shieldclaw/: __init__.py  __main__.py  exceptions.py  main.py  models.py  orchestrator.py
shield-claw/src/shieldclaw/context/: __init__.py  aggregator.py
shield-claw/src/shieldclaw/intelligence/: CONTEXT.md  __init__.py  anthropic_provider.py  base.py  ollama.py  openai_provider.py  parser.py  prompts.py
shield-claw/src/shieldclaw/reporting/: __init__.py  builder.py
shield-claw/src/shieldclaw/sandbox/: CONTEXT.md  __init__.py  docker_orchestrator.py
shield-claw/tests/: conftest.py  test_aggregator.py  test_architecture.py  test_cli.py  test_docker_orchestrator.py  test_docker_orchestrator_integration.py  test_exceptions.py  test_llm_parser.py  test_models.py  test_ollama_provider.py  test_orchestrator.py  test_report_builder.py
src/main/resources/: application.yml
src/main/resources/offline-payloads/: ai-generated-PR-78AED133.json  (+1 more)
test_repos/vulnerable-flask-app/: Dockerfile  app.py  context.patch  docker-compose.yml  init.sql
validation/target-app/: .dockerignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  seed.sql  server.js
validation/training-diffs/: README.md  broken-auth-no-session.diff  command-injection-exec.diff  path-traversal-filename.diff  sqli-unsanitized-query.diff  xss-unescaped-output.diff
(+48 files in other folders)
